# namedpipe_test

./: CMakeLists.txt  README.md  named_pipe_wrapper.cpp
client/: CMakeLists.txt  main.cpp
epoll/: CMakeLists.txt  README.md
epoll/client/: CMakeLists.txt  main.cpp
epoll/include/: CMakeLists.txt  EpollHandler.cpp  EpollHandler.h  NamedPipeManager.cpp  NamedPipeManager.h  NamedPipeWrapper.cpp
epoll/server/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  NamedPipeClient.cpp  NamedPipeClient.h  NamedPipeManager.cpp  NamedPipeManager.h  NamedPipeServer.cpp  NamedPipeServer.h  NamedPipeWrapper.cpp  NamedPipeWrapper.h
namedpipe_with_epoll/: README.md
namedpipe_with_epoll/client/: CMakeLists.txt
namedpipe_with_epoll/include/: CMakeLists.txt
namedpipe_with_epoll/server/: CMakeLists.txt  main.cpp
namedpipe_with_thread/: CMakeLists.txt
namedpipe_with_thread/client/: CMakeLists.txt  main.cpp
namedpipe_with_thread/include/: CMakeLists.txt  NamedPipeManager.cpp  mutex.hpp
namedpipe_with_thread/server/: CMakeLists.txt
server/: CMakeLists.txt  IpcServer.cpp  IpcServer.h  NamedPipeManager.cpp  NamedPipeManager.h  main.cpp  named_pipe_manager.cpp  named_pipe_manager.h  named_pipe_wrapper.cpp  named_pipe_wrapper.h
tcp_with_boost_asio/: CMakeLists.txt  README.md
tcp_with_boost_asio/client/: CMakeLists.txt  main.cpp
tcp_with_boost_asio/include/: AsioClient.cpp  AsioClient.h  AsioFactory.h  AsioImpl.hpp  AsioInterface.cpp  AsioInterface.h  AsioServer.cpp  AsioServer.h  CMakeLists.txt
tcp_with_boost_asio/include/boost_1.66.0/lib/: libboost_iostreams.so.1.66.0  libboost_locale.so.1.66.0  libboost_regex.so.1.66.0
tcp_with_boost_asio/server/: CMakeLists.txt  main.cpp
threadstyle/: CMakeLists.txt
threadstyle/server/: CMakeLists.txt
unixdomainsocket/: CMakeLists.txt  README.md
unixdomainsocket/client/: CMakeLists.txt  main.cpp
unixdomainsocket/include/: CMakeLists.txt  EpollWrapper.cpp  EpollWrapper.h  Message.cpp  Message.h  SocketWrapper.cpp  SocketWrapper.h  UnixDomainSocketClient.cpp  UnixDomainSocketClient.h  UnixDomainSocketFactory.h  UnixDomainSocketInterface.cpp  UnixDomainSocketInterface.h  UnixDomainSocketServer.cpp  UnixDomainSocketServer.h  UnixDomainSocketSessionManager.cpp  UnixDomainSocketSessionManager.h
unixdomainsocket/server/: CMakeLists.txt  main.cpp
